# SPDX-FileCopyrightText: 2006-2023, Knut Reinert & Freie Universität Berlin
# SPDX-FileCopyrightText: 2016-2023, Knut Reinert & MPI für molekulare Genetik
# SPDX-License-Identifier: CC0-1.0

add_library (generator pigeon.cpp suffixFilter.cpp zeroOnesZero.cpp h2.cpp)
target_link_libraries (generator)
